--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Dubai_360Video</title>
+    <title>Unity WebGL Player | 360VirtualTour</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Dubai_360Video</div>
+        <div id="unity-build-title">360VirtualTour</div>
       </div>
     </div>
     <script>
@@ -63,8 +63,8 @@
         frameworkUrl: buildUrl + "/360 WebGL Build.framework.js",
         codeUrl: buildUrl + "/360 WebGL Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Dubai_360Video",
+        companyName: "XR Horizon",
+        productName: "360VirtualTour",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
